<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageViewRefugee"
        android:layout_width="65dp"
        android:layout_height="100dp"
        android:src="@android:drawable/ic_menu_gallery"
        android:scaleType="fitCenter"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRefugeeName"
            android:textSize="16sp"
            android:text="@string/name"
            />
        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRefugeeMyRC"
            android:textSize="16sp"
            android:text="@string/refugee_myrc"
            />
        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRefugeeCategory"
            android:textSize="16sp"
            android:text="@string/refugee_category"
            />
        <TextView
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRefugeeCountry"
            android:textSize="16sp"
            android:text="@string/refugee_country"
            />
    </LinearLayout>

</LinearLayout>