<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageViewRefugee"
        android:layout_width="65dp"
        android:layout_height="100dp"
        android:src="@android:drawable/ic_menu_gallery"
        android:scaleType="fitCenter"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRefugeeName"
            android:text="@string/name"
            />
        <TextView
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRefugeeMyRC"
            android:text="@string/refugee_myrc"
            />
        <TextView
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRefugeeCategory"
            android:text="@string/refugee_category"
            />
        <TextView
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRefugeeCountry"
            android:text="@string/refugee_country"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textResult"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#0e8ef7"
        android:text="100%"
        android:padding="5dp"
        android:layout_gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content" />

</LinearLayout>